--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -337,12 +337,12 @@
     -fx-background-radius: 0;
 }
 
-#tags {
+#genres {
     -fx-hgap: 7;
     -fx-vgap: 3;
 }
 
-#tags .label {
+#genres .label {
     -fx-text-fill: white;
     -fx-background-color: #3e7b91;
     -fx-padding: 1 3 1 3;
