--- a/src/main/resources/view/MainTitlePanel.fxml
+++ b/src/main/resources/view/MainTitlePanel.fxml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.chart.BarChart?>
+<?import javafx.scene.chart.CategoryAxis?>
+<?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Separator?>
@@ -50,6 +53,19 @@
                               <Insets bottom="8.0" top="8.0" />
                            </VBox.margin>
                         </Label>
+                        <Label fx:id="title11111" alignment="CENTER" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" styleClass="label-bright" text="Played this week:" textAlignment="CENTER">
+                           <VBox.margin>
+                              <Insets bottom="10.0" top="30.0" />
+                           </VBox.margin>
+                        </Label>
+                        <BarChart prefHeight="100.0">
+                          <xAxis>
+                            <CategoryAxis side="BOTTOM" />
+                          </xAxis>
+                          <yAxis>
+                            <NumberAxis side="LEFT" />
+                          </yAxis>
+                        </BarChart>
                         <Region prefHeight="200.0" prefWidth="200.0" />
                      </children>
                   </VBox>
