--- a/src/main/resources/view/expenses/DailyExpendituresPanel.fxml
+++ b/src/main/resources/view/expenses/DailyExpendituresPanel.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="180.0" prefWidth="200.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane prefWidth="200.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <HBox layoutX="23.0" layoutY="14.0" prefHeight="57.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="14.0">
          <children>
