--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -33,36 +33,33 @@
           </Menu>
         </MenuBar>
 
-                 <StackPane fx:id="commandBoxPlaceholder" styleClass="pane-with-border" VBox.vgrow="NEVER">
+                 <StackPane fx:id="commandBoxPlaceholder" styleClass="stack-pane" VBox.vgrow="NEVER">
           <padding>
             <Insets bottom="5" left="10" right="10" top="5" />
           </padding>
+               <VBox.margin>
+                  <Insets left="10.0" right="10.0" top="10.0" />
+               </VBox.margin>
         </StackPane>
 
-              <StackPane fx:id="resultDisplayPlaceholder" maxHeight="150.0" prefHeight="120.0" styleClass="pane-with-border" VBox.vgrow="ALWAYS">
-          <padding>
-            <Insets bottom="5" left="10" right="10" top="5" />
-          </padding>
+              <StackPane fx:id="resultDisplayPlaceholder" maxHeight="150.0" prefHeight="120.0" styleClass="stack-pane" VBox.vgrow="ALWAYS">
+               <VBox.margin>
+                  <Insets left="10.0" right="10.0" top="10.0" />
+               </VBox.margin>
         </StackPane>
             <HBox prefHeight="450.0" prefWidth="1250.0" VBox.vgrow="ALWAYS">
                <children>
-              <VBox fx:id="personList" maxWidth="250.0" prefHeight="450.0" prefWidth="250.0" styleClass="pane-with-border" HBox.hgrow="ALWAYS">
-                <padding>
-                  <Insets bottom="10" left="10" right="10" top="10" />
-                </padding>
-                <StackPane fx:id="personListPanelPlaceholder" />
-              </VBox>
                   <VBox minWidth="1000.0" prefHeight="450.0" prefWidth="1000.0" HBox.hgrow="ALWAYS">
                      <children>
-                        <StackPane fx:id="bodyMasterListPlaceholder" maxHeight="330.0" prefHeight="330.0" styleClass="pane-with-border">
+                        <StackPane fx:id="bodyMasterListPlaceholder" maxHeight="330.0" prefHeight="330.0" styleClass="stack-pane">
                            <padding>
-                              <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
+                              <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                            </padding>
                            <VBox.margin>
                               <Insets />
                            </VBox.margin>
                         </StackPane>
-                      <StackPane fx:id="lineChartPanelPlaceholder" maxHeight="100.0" prefHeight="100.0" styleClass="pane-with-border">
+                      <StackPane fx:id="lineChartPanelPlaceholder" maxHeight="100.0" prefHeight="100.0" styleClass="stack-pane">
                           <padding>
                               <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
                           </padding>
@@ -75,6 +72,16 @@
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </padding>
                   </VBox>
+              <VBox fx:id="personList" maxWidth="250.0" prefHeight="450.0" prefWidth="250.0">
+                <StackPane fx:id="personListPanelPlaceholder" prefHeight="450.0" styleClass="stack-pane">
+                        <VBox.margin>
+                           <Insets />
+                        </VBox.margin>
+                     </StackPane>
+                     <padding>
+                        <Insets bottom="10.0" right="10.0" top="10.0" />
+                     </padding>
+              </VBox>
                </children>
             </HBox>
         <StackPane fx:id="statusbarPlaceholder" VBox.vgrow="NEVER" />
