Make viewed Image resize to window

--- a/src/main/resources/view/ViewPanel.fxml
+++ b/src/main/resources/view/ViewPanel.fxml
@@ -1,25 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.FlowPane?>
-
-<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.FlowPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
+
 <HBox xmlns:fx="http://javafx.com/fxml/1" fx:id="cardPane" xmlns="http://javafx.com/javafx/8">
     <ScrollPane fx:id="scroll" hbarPolicy="NEVER" minWidth="250" prefWidth="500" HBox.hgrow="ALWAYS" styleClass="pane-with-border">
         <AnchorPane>
             <StackPane fx:id="stackPane" alignment="CENTER" HBox.hgrow="ALWAYS" minHeight="${scroll.height}" styleClass="pane-with-border">
                 <VBox alignment="CENTER" minWidth="${scroll.width}" spacing="5" >
                     <padding>
-                        <Insets bottom="5" left="5" right="5" top="5"/>
+                        <Insets bottom="5" top="5"/>
                     </padding>
                     <Label fx:id="id" styleClass="cell_big_label"/>
-                    <ImageView fx:id="display" cache="true" cacheHint="SPEED" fitWidth="400" pickOnBounds="true"
+                    <ImageView fx:id="display" cache="true" cacheHint="SPEED" pickOnBounds="true"
                                preserveRatio="true"/>
                     <FlowPane fx:id="tags" alignment="CENTER"/>
                     <Label fx:id="description" alignment="CENTER" contentDisplay="CENTER" styleClass="cell_view_label"
